# MiraculousMembranes

./: .gitignore  environment.yml
Algebra/: Algebra_Interaction.aux  Algebra_Interaction.fdb_latexmk  Algebra_Interaction.fls  Algebra_Interaction.tex  Hessian_bending.aux  Hessian_bending.fdb_latexmk  Hessian_bending.fls  Hessian_bending.tex  Hessian_term.aux  Hessian_term.dvi  Hessian_term.fdb_latexmk  Hessian_term.fls  Hessian_term.tex
Methods-paper/: Methods_draft.aux  Methods_draft.fdb_latexmk  Methods_draft.fls  Methods_draft.out  Methods_draft.tex
core/src/: discrete-exterior-calculus.cpp  geometry.cpp
input/: Triangle_flap.mtl  Wrong_bunnny.mtl  coordinates_config_1.csv  faces_config_1.csv  plymcout.ply  unstable_cilinder.mtl  very_long_cilinder_pushed.mtl
projects/geometric-flow/: CMakeLists.txt
projects/geometric-flow/Config_files/: Wrapping_strg_1500_radius_0.2_KA_0.05_KB_20.0.json  Wrapping_strg_1900_radius_0.3_KA_0.05_KB_10.0.json
projects/geometric-flow/Config_files_0/: No_beads.json  Wrapping.json  Wrapping_strg_1500_radius_0.2_KA_0.05_KB_20.0.json  formatted_data.json  sample.json
projects/geometric-flow/Scripts/: Analysis_nb.ipynb  Analysis_two_beads.ipynb  Analyze_pulling.py  Analyze_test_cluster.py  Bead_convergence.ipynb  Bead_to_xyz.py  CMakeCache.txt  Compare_mats.py  Contour_plot.py  Create_plane_obj.py  Create_subjob.py  Create_subjob_barbell.py  Create_subjob_bead_tube.py  Create_subjob_beads.py  Create_subjob_beads_pull.py  Create_subjob_fields.py  Create_subjob_minimal_sur.py  Create_subjob_relaxation.py  Create_subjob_serial.py  Create_subjob_test.py  Create_subjob_two_beads.py  Create_subjob_two_beads_simple.py  Csv_OBj_converter.py  Debug_remeshing.py  Debugging_plane.py  Delete_sims.sh  Distributions.py  Energy_minimization.eps  Force_field.py  Hessian_plot.py  Image_ovito.py  Image_ovito.sh  Jinja_exp.py  Mem_barbell_up.sh  Mem_bead_tube.sh  Mem_bead_up.sh  Mem_continue_two.sh  Mem_field_up.sh  Mem_pull_up.sh  Mem_relaxation_up.sh  (+42 more)
projects/geometric-flow/Templates/: Barbell.txt  ContinueTwoBeads.txt  ContinueTwoBeadsRescale.txt  ContinueTwoBeadsRescaleArea.txt  Linear_field.txt  Tube_relatation.txt  Tube_relaxation.txt  Two_beads copy 2.txt  Two_beads copy.txt  Two_beads.txt  Wrapping.jinja  Wrapping.txt  Wrapping_full.txt  Wrapping_two_fixed.txt  Wrapping_two_spring.txt  Wrapping_vesicle.txt  Wrapping_with_tube.txt
projects/geometric-flow/build_workds/: CMakeCache.txt  F77Mangle.h  Makefile  cmake_install.cmake  imgui.ini
projects/geometric-flow/build_workds/Dependencies/Lapack-3.8.0/src/EP_Lapack-stamp/: EP_Lapack-urlinfo.txt  download-EP_Lapack.cmake  extract-EP_Lapack.cmake
projects/geometric-flow/build_workds/Dependencies/Lapack-3.8.0/tmp/: EP_Lapack-cfgcmd.txt
projects/geometric-flow/build_workds/Dependencies/Metis-4.0.3/src/EP_Metis-stamp/: EP_Metis-urlinfo.txt  download-EP_Metis.cmake  extract-EP_Metis.cmake
projects/geometric-flow/build_workds/Dependencies/Mumps-4.10.0/src/EP_Mumps-stamp/: EP_Mumps-urlinfo.txt  download-EP_Mumps.cmake  extract-EP_Mumps.cmake
projects/geometric-flow/build_workds/Dependencies/Mumps-4.10.0/tmp/: EP_Mumps-cfgcmd.txt
projects/geometric-flow/build_workds/Ipopt/: ipopt.pc
projects/geometric-flow/build_workds/Ipopt/include/: config.h
projects/geometric-flow/include/: Beads.h  Energy_Handler.h  Interaction.h  Mem-3dg.h  Mem-3dg_implicit.h  Mem-3dg_parallel.h  NormalNLP.hpp  ShapeNLP.hpp  Translator.h  gauss-curvature-flow.h  mean-curvature-flow.h  membrane-flow.h  normal-flow.h  willmore-flow-2.h  willmore-flow-scho.h  willmore-flow.h
projects/geometric-flow/src/: Bead_potential_plot.py  Beads.cpp  Bouncing_ball.cpp  CMakeLists.txt  E_test_2.cpp  E_tests.cpp  E_tests_finite.cpp  Energy_Handler.cpp  Interaction.cpp  Mem-3dg.cpp  Mem-3dg_EVOLVINGH.cpp  Mem-3dg_before_evolving_Htar.cpp  Mem-3dg_implicit.cpp  Mem-3dg_improvement.cpp  Mem-3dg_incoming_he.cpp  Mem-3dg_parallel.cpp  Mesh_translator.cpp  NormalNLP.cpp  Post_processing.cpp  Processing_tube.cpp  Pullling_analysis.py  Save_bead_to_obj.py  ShapeNLP.cpp  Simple_script.cpp  Test_fan_basic.cpp  Translator.cpp  Window.cpp  animated_window  animation  gauss-curvature-flow.cpp  main.cpp  main_cluster.cpp  main_cluster_bad.cpp  main_cluster_bead.cpp  main_cluster_bead_pulling.cpp  main_cluster_copy.cpp  main_cluster_parallel.cpp  main_cluster_pulling.cpp  main_force_field.c[  main_force_field.cpp  (+17 more)
